# json-cpp

./: .gitignore  CMakeLists.txt  README.md  generate_gcc.bat  generate_vc.bat
docs/: design_notes.md
include/: json-cpp.hpp
include/json-cpp/: ParserError.hpp  Stream.hpp  generate.hpp  parse.hpp  serialization_helpers.hpp  std_types.hpp  value_types.hpp
include/json-cpp/details/: ParserImpl.hpp  number_parser.hpp  number_writer.hpp  parser_utility.hpp  string_parser.hpp  string_writer.hpp  utility.hpp
scripts/: make_single_include.py
single_include/: json-cpp.hpp
tests/: CMakeLists.txt  abstract_class_example.cpp  catch_wrap.hpp  examples.cpp  generator_tests.cpp  parser_tests.cpp  tests_main.cpp  variant_example.cpp
tests/gcc/: test.bat  test_single_include.bat
tests/msvc/: json-cpp-tests.sln  json-cpp-tests.vcxproj  json-cpp-tests.vcxproj.filters
